{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 8,
  "lineage": "9796a0ee-0361-bf7b-0daa-64c474339a10",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devsecops_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580034872400:internet-gateway/igw-0c36cb67ef0efd770",
            "id": "igw-0c36cb67ef0efd770",
            "owner_id": "580034872400",
            "tags": {
              "Name": "DevSecOps-IGW"
            },
            "tags_all": {
              "Name": "DevSecOps-IGW"
            },
            "vpc_id": "vpc-08c7d82137a1f1baa"
          },
          "dependencies": [
            "aws_vpc.devsecops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580034872400:route-table/rtb-0d0b058ea843fe53c",
            "id": "rtb-0d0b058ea843fe53c",
            "owner_id": "580034872400",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c36cb67ef0efd770",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DevSecOps-Public-Route-Table"
            },
            "tags_all": {
              "Name": "DevSecOps-Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c7d82137a1f1baa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.devsecops_igw",
            "aws_vpc.devsecops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077bfdd6b7600d0c6",
            "route_table_id": "rtb-0d0b058ea843fe53c",
            "subnet_id": "subnet-0a1f76de44bd945e4"
          },
          "dependencies": [
            "aws_internet_gateway.devsecops_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.devsecops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devsecops_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580034872400:security-group/sg-02a5a93727114d571",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a5a93727114d571",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "173.216.28.115/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250217180037460400000001",
            "name_prefix": "terraform-",
            "owner_id": "580034872400",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DevSecOps-SG"
            },
            "tags_all": {
              "Name": "DevSecOps-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c7d82137a1f1baa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devsecops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580034872400:subnet/subnet-0a1f76de44bd945e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1f76de44bd945e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "580034872400",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DevSecOps-Public-Subnet"
            },
            "tags_all": {
              "Name": "DevSecOps-Public-Subnet"
            },
            "vpc_id": "vpc-08c7d82137a1f1baa"
          },
          "dependencies": [
            "aws_vpc.devsecops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devsecops_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580034872400:vpc/vpc-08c7d82137a1f1baa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ffbeb3c062a9fac7",
            "default_route_table_id": "rtb-0559d55ef00b50362",
            "default_security_group_id": "sg-0d27e7c07bd75c8bf",
            "dhcp_options_id": "dopt-0db191eea069aa930",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08c7d82137a1f1baa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0559d55ef00b50362",
            "owner_id": "580034872400",
            "tags": {
              "Name": "DevSecOps-VPC"
            },
            "tags_all": {
              "Name": "DevSecOps-VPC"
            }
          }
        }
      ]
    }
  ]
}